--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .heading
 {
-    width: 85%;
+    width: 100%;
     text-align: left;
 }
 
@@ -23,4 +23,22 @@
 #start, #status
 {
     font-size: 22px;
+}
+
+h4
+{
+    background-color: whitesmoke;
+    line-height: 2;
+    margin: 0px;
+}
+
+.modal-dialog
+{
+    width: 90%;
+}
+
+.instruction_image
+{
+   display:inline-block;
+   width: 45%;
 }
